--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
+
+html,
+body {
+	margin: 0;
+	padding: 0;
+	font-family: 'PT Root UI', 'Helvetica Neue', Arial, sans-serif;
+}
+
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+	font-family: 'PT Root UI';
+	src: url('../assets/fonts/PT-Root-UI_Regular.woff2') format('woff2');
+	weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'PT Root UI';
+	src: url('../assets/fonts/PT-Root-UI_Bold.woff2') format('woff2');
+	weight: 700;
+	font-style: bold;
+}
